--- a/package.json
+++ b/package.json
@@ -1,18 +1,18 @@
 {
-  "name": "wildfire-tracks",
+  "name": "boilerplate",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@iconify/icons-mdi": "^1.0.153",
-    "@iconify/react": "^1.1.3",
-    "@testing-library/jest-dom": "^5.11.6",
-    "@testing-library/react": "^11.2.2",
-    "@testing-library/user-event": "^12.2.2",
+    "@iconify/icons-mdi": "^1.1.11",
+    "@iconify/react": "^1.1.4",
+    "@testing-library/jest-dom": "^5.11.9",
+    "@testing-library/react": "^11.2.5",
+    "@testing-library/user-event": "^12.6.3",
     "google-map-react": "^2.1.9",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-scripts": "4.0.1",
-    "web-vitals": "^0.2.4"
+    "react-scripts": "4.0.2",
+    "web-vitals": "^1.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
